--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+title: YouYehao's Homepage
+page-top-title: YouYehao
+top-section-bg-text: Record Learning of everything
+home-subtitle: YouYehao;|&ensp;游烨昊
+copyright-text: '&copy; YYouYehao 2023-2025. All Rights Reserved.'
