--- a/contents/config.yml
+++ b/contents/config.yml
@@ -2,4 +2,4 @@ title: YouYehao's Homepage
 page-top-title: YouYehao
 top-section-bg-text: Record Learning of everything
 home-subtitle: YouYehao;|&ensp;游烨昊
-copyright-text: '&copy; YYouYehao 2023-2025. All Rights Reserved.'
+copyright-text: '&copy; YouYehao 2023-2025. All Rights Reserved.'
